k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-reviews-api
spec:
  selector:
    app: product-reviews-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
